# matrix-olm-cpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
.ci/: install.sh  run.sh
.make/: clangFormatDiff.sh
cmake/: Olm.cmake
include/MatrixOlmWrapper/: utils.hpp
src/: APIWrapper.hpp  APIWrapperMock.hpp  APIWrapperTestImpl.hpp  MatrixOlmCpp.cpp  MatrixOlmCpp.hpp  MatrixOlmWrapper.cpp  MatrixOlmWrapper.hpp  olmWrapper.cpp  olmWrapper.hpp
tests/: TestUtils.cpp  TestWrapper.cpp  test.cpp
tests/data/: ValidKeyUpload.json
